Added support for MediaWiki like handling of pages being in the "Category" namespace. These wiki links (e.g. "Catgory:SomePage") are now automatically removed from the wiki body and added to an array, which will be later re-added to the page.
This way it is possible to have all the category links in a footer - same way as for MediaWiki. 

Please note: The template of the extension needs to be altered as well in order to get it up and running, as the new marker ###CATEGORY### was added.

git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/dr_wiki/trunk@17349 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/res/drwiki.tmpl
+++ b/res/drwiki.tmpl
@@ -10,6 +10,7 @@
 <div align="right"> ###ICON_HOME### ###ICON_RELOAD### ###ICON_EDIT### ###ICON_VERSIONS### ###ICON_GETHTML### ###ICON_LOCK###</div>
 <hr size="1" width="100%"> ###EDIT_PANEL###
 <p>###BODY###</p>
+<p><div class="wiki-box-yellow"> Related Categories: [ ###CATEGORY### ]</div></p>
 ###RATINGS###
 <hr size="1" width="100%"><br>
 <div align="right" style="font-size:10pt;">###GW2B### Last changed: ###DATE### by ###AUTHOR### - ###ICON_HOME### ###ICON_RELOAD### ###ICON_EDIT### ###ICON_VERSIONS### ###ICON_GETHTML### ###ICON_LOCK### ###GW2E###</div>
