Several bug-fixes for the last few things I added wrt the category handling (Issue #2733 and Issue #2737). Category pages are now created with a list of pages being associated with a category - so no more adding the categorylist plug-in. Also the extension template needs to be updated, as I had to introduce a new marker --> ###CATEGORYLIST###
However, unfortunately one thing remains to be solved: If a category page is not yet existing, nothing is shown - except for the create page form... The idea is to add a function that automatically creates the respective category page.

Besides this, I cleaned up a bit

git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/dr_wiki/trunk@17487 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/res/drwiki.tmpl
+++ b/res/drwiki.tmpl
@@ -10,6 +10,7 @@
 <div align="right"> ###ICON_HOME### ###ICON_RELOAD### ###ICON_EDIT### ###ICON_VERSIONS### ###ICON_GETHTML### ###ICON_LOCK###</div>
 <hr size="1" width="100%"> ###EDIT_PANEL###
 <p>###BODY###</p>
+<p>###CATEGORYLIST###</p>
 <p>###CATEGORY###</p>
 ###RATINGS###
 <hr size="1" width="100%"><br>
